Prevent title overflow in the tree GUI's items

--- a/src/core/user-interfaces/tree/tree-component.css
+++ b/src/core/user-interfaces/tree/tree-component.css
@@ -5,16 +5,21 @@
 .ui.tree .tree-item {
     display: flex;
     width: 100%;
-    justify-content: space-between;
     padding: 0.25ex 0 0.25ex 1em;
+    justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.015);
     border-width: 1px 0 1px 2px;
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.05);
 }
 
+.ui.tree .tree-item .title {
+    max-height: 2ex;
+    overflow: hidden;
+}
+
 .ui.tree .tree-item:hover {
-    background-color: rgba(0, 0, 0, 0.025);
+    background-color: rgba(0, 0, 0, 0.05);
     border-color: rgba(0, 0, 0, 0.15);
 }
 
